[package]
name = "abc214"
version = "0.1.0"
edition = "2018"

# dependencies added to new project
[dependencies]
# proconio = "0.4.3"
proconio = { version = "0.3.6", features = ["derive"] }
# rand = { version = "0.7.3", features = ["small_rng"] }
# rand_pcg = "0.2.1"
# num = "0.2.1"
# regex = "1.3.6"
itertools = "0.10.1"

[profile.release]
lto = true
panic = 'abort'
